test yaml in x86 with dummy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,8 @@
         "complex": "cpp",
         "cstring": "cpp",
         "cfenv": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "list": "cpp",
+        "valarray": "cpp"
     }
 }
