--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(InferenceProject LANGUAGES CXX)
 
-# 使用 C++14
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-# add_definitions(-D_GLIBCXX_USE_CXX11_ABI=1)
 
 
 # 库文件目录
@@ -29,7 +27,7 @@ set(MAIN_SRC
 
 # 构建动态库
 add_library(inference SHARED ${LIB_SRC})
-target_link_libraries(inference PUBLIC pthread yaml-cpp)
+target_link_libraries(inference PUBLIC pthread yaml-cpp opencv_core opencv_imgproc opencv_imgcodecs)
 
 # 构建可执行文件
 add_executable(inference_app ${MAIN_SRC})
@@ -39,14 +37,14 @@ target_include_directories(inference
     ${CMAKE_SOURCE_DIR}/include
     ${CMAKE_SOURCE_DIR}/3rd_party/opencv/include/opencv4
     ${CMAKE_SOURCE_DIR}/3rd_party/lynxi/include
-    ${CMAKE_SOURCE_DIR}/3rd_party/yaml/include/yaml-cpp
+    ${CMAKE_SOURCE_DIR}/3rd_party/yaml/include
 )
 
 # 链接第三方库到 inference
 # target_link_libraries(inference
-    # opencv_core
-    # opencv_imgproc
-    # opencv_imgcodecs
+#     opencv_core
+#     opencv_imgproc
+#     opencv_imgcodecs
     # yaml-cpp
     # LYNXICHIPSDKCLIENT
 # )
