--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,17 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
-# 库文件目录
 link_directories(
     ${CMAKE_SOURCE_DIR}/3rd_party/opencv/lib
     ${CMAKE_SOURCE_DIR}/3rd_party/lynxi/lib
-    # ${CMAKE_SOURCE_DIR}/3rd_party/yaml/lib/arm
-    ${CMAKE_SOURCE_DIR}/3rd_party/yaml/lib/x86
+    ${CMAKE_SOURCE_DIR}/3rd_party/yaml/lib/arm
+    /usr/local/lynxi/sdk/libs
+    # ${CMAKE_SOURCE_DIR}/3rd_party/yaml/lib/x86
 )
 
 set(LIB_SRC
     src/executor.cc
-    # src/lynxi.cc
+    src/lynxi.cc
     src/monitor.cc
     src/session.cc
     src/dummy.cc
@@ -25,7 +25,6 @@ set(MAIN_SRC
     src/main.cc
 )
 
-# 构建动态库
 add_library(inference SHARED ${LIB_SRC})
 target_link_libraries(inference
     PUBLIC
@@ -34,8 +33,9 @@ target_link_libraries(inference
         opencv_core
         opencv_imgproc
         opencv_imgcodecs
+        LYNCHIPSDKCLIENT
+        LYNSMICLIENTCOMM
 )
-# 构建可执行文件
 add_executable(inference_app ${MAIN_SRC})
 
 target_include_directories(inference
@@ -44,16 +44,13 @@ target_include_directories(inference
     ${CMAKE_SOURCE_DIR}/3rd_party/opencv/include/opencv4
     ${CMAKE_SOURCE_DIR}/3rd_party/lynxi/include
     ${CMAKE_SOURCE_DIR}/3rd_party/yaml/include
+    /usr/local/lynxi/sdk/include
 )
 
-# 链接第三方库到 inference
-# target_link_libraries(inference
-#     opencv_core
-#     opencv_imgproc
-#     opencv_imgcodecs
-    # yaml-cpp
-    # LYNXICHIPSDKCLIENT
-# )
-
-# 链接动态库到可执行程序
 target_link_libraries(inference_app inference)
+
+set_target_properties(inference_app PROPERTIES
+    BUILD_WITH_INSTALL_RPATH TRUE
+    INSTALL_RPATH "/usr/lib/aarch64-linux-gnu"
+    INSTALL_RPATH_USE_LINK_PATH TRUE
+)
