--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,28 +4,25 @@ project(InferenceProject LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-
-link_directories(
-    ${CMAKE_SOURCE_DIR}/3rd_party/opencv/lib
-    ${CMAKE_SOURCE_DIR}/3rd_party/lynxi/lib
-    ${CMAKE_SOURCE_DIR}/3rd_party/yaml/lib/arm
-    /usr/local/lynxi/sdk/libs
-    # ${CMAKE_SOURCE_DIR}/3rd_party/yaml/lib/x86
-)
-
 set(LIB_SRC
     src/executor.cc
     src/lynxi.cc
     src/monitor.cc
     src/session.cc
+    src/util.cc
     src/dummy.cc
 )
 
-set(MAIN_SRC
-    src/main.cc
+add_library(inference SHARED ${LIB_SRC})
+
+target_link_directories(inference
+    PUBLIC
+        ${CMAKE_SOURCE_DIR}/3rd_party/opencv/lib
+        ${CMAKE_SOURCE_DIR}/3rd_party/lynxi/lib
+        ${CMAKE_SOURCE_DIR}/3rd_party/yaml/lib/arm
+        /usr/local/lynxi/sdk/libs
 )
 
-add_library(inference SHARED ${LIB_SRC})
 target_link_libraries(inference
     PUBLIC
         pthread
@@ -36,7 +33,6 @@ target_link_libraries(inference
         LYNCHIPSDKCLIENT
         LYNSMICLIENTCOMM
 )
-add_executable(inference_app ${MAIN_SRC})
 
 target_include_directories(inference
     PUBLIC
@@ -47,10 +43,18 @@ target_include_directories(inference
     /usr/local/lynxi/sdk/include
 )
 
-target_link_libraries(inference_app inference)
-
-set_target_properties(inference_app PROPERTIES
-    BUILD_WITH_INSTALL_RPATH TRUE
-    INSTALL_RPATH "/usr/lib/aarch64-linux-gnu"
-    INSTALL_RPATH_USE_LINK_PATH TRUE
+set(APP_SRCS
+    src/resnet.cc
+    src/lenet.cc
 )
+
+foreach(app_src ${APP_SRCS})
+    get_filename_component(app_name ${app_src} NAME_WE)
+    add_executable(${app_name} ${app_src})
+    target_link_libraries(${app_name} inference)
+    set_target_properties(${app_name} PROPERTIES
+        BUILD_WITH_INSTALL_RPATH TRUE
+        INSTALL_RPATH "/usr/lib/aarch64-linux-gnu"
+        INSTALL_RPATH_USE_LINK_PATH TRUE
+    )
+endforeach()
